--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.85.3",
+    "@tanstack/react-query-devtools": "^5.85.3",
+    "axios": "^1.11.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
+    "@types/react-autosuggest": "^10.1.11",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
