--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
